# cv_nlp_deeplearning

./: .gitignore  README.md
LLM_note/: 20240913_sequence_parallel.md  20250406_attn_expert_dist.md  20250411_rtp_llm.md  20250413_megascale_infer.md
cuda_snippet/: 001_cuda_instruct_issue.md  002_ban_conflict.md  002_bank_conflict.md  003_gemm.md  004_cud_usage.md  004_reduce.md  call_eval.py  call_openai.py
cuda_snippet/004_reduce_benchmark/: CMakeLists.txt  Makefile  reduce_sum.cu  reduce_sum.ptx  reduce_sum3.cu  reduce_sum_triton.py  reduce_sum_triton2.py  run.sh  utils.cc  utils.h
cuda_snippet/005_transpose/: MakeFile  transpose.cu  transpose_triton.py
cuda_snippet/006_topk_gating_and_grouped_topk/: grouped_topk_fused.cu  sgl_grouped_topk.py  topk_gating.py  topk_gating_triton.py
禅宗与阳明心学/: 六祖坛经  阳明心学.md
